# ShardNet

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  desktop-packages.yml
deploy/: README.md
deploy/docker/: tracker.Dockerfile
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/renderer/: app.js  index.html  styles.css
src/shardnet/: __init__.py
src/shardnet/cli/: __init__.py  main.py
src/shardnet/client/: __init__.py
src/shardnet/client/agent/: __init__.py  main.py  schemas.py  service.py
src/shardnet/client/core/: __init__.py  download_store.py  manifest.py  models.py  node.py  peer_client.py  peer_server.py  protocol.py  share_store.py  tracker_client.py
src/shardnet/common/: __init__.py  config.py  constants.py  errors.py  logging.py
src/shardnet/tracker/: __init__.py  api.py  errors.py  main.py  schemas.py  store.py
tests/integration/: test_node_e2e.py
tests/unit/: test_agent_api.py  test_cli_client_commands.py  test_client_manifest.py  test_constants.py  test_download_store.py  test_peer_protocol.py  test_settings.py  test_tracker_api.py
