[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "shardnet"
version = "0.1.0"
description = "Production-minded BitTorrent-inspired P2P file sharing system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20,<1.0",
    "fastapi>=0.111,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "structlog>=24.2,<25.0",
    "typer>=0.12,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
shardnet = "shardnet.cli.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/shardnet"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
